bm::applied kyc perm chnage

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -78,7 +78,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}"
-                            *ngxPermissionsOnly="['appliedKycEdit','customerClassificationEdit']">
+                            *ngxPermissionsOnly="['appliedKycEdit', 'cceKycRatig', 'opsKycRating']">
                             <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
                                 <span
                                     *ngIf="(permission.cceRating  && role.customerKycClassification?.kycStatusFromCce == 'pending') 
