--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
@@ -76,25 +76,10 @@
                         </div>
 
                         <div class="row kt-margin-b-15">
-                            <div class="col-6">
-                                <div class="row">
-                                    <div class="col-4 form-label">
-                                        <mat-label>Ornament Release Amount</mat-label>
-                                    </div>
-                                    <div class="col-7">
-                                        <input class="form-control" formControlName="releaseAmount"
-                                            [class.isError]="controls.releaseAmount.touched && controls.releaseAmount.invalid">
-                                        <mat-error
-                                            *ngIf="controls.releaseAmount.touched && controls.releaseAmount.errors?.required">
-                                            Required field
-                                        </mat-error>
-                                    </div>
-                                </div>
-                            </div>
 
                             <div class="col-6">
                                 <div class="row">
-                                    <div class="offset-1 col-4 form-label">
+                                    <div class="col-4 form-label">
                                         <mat-label>Interest Amount</mat-label>
                                     </div>
                                     <div class="col-7">
@@ -102,6 +87,22 @@
                                             [class.isError]="controls.interestAmount.touched && controls.interestAmount.invalid">
                                         <mat-error
                                             *ngIf="controls.interestAmount.touched && controls.interestAmount.errors?.required">
+                                            Required field
+                                        </mat-error>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-6" *ngIf="data.name !== 'fullReleaseApproval'">
+                                <div class="row">
+                                    <div class="offset-1 col-4 form-label">
+                                        <mat-label>Ornament Release Amount</mat-label>
+                                    </div>
+                                    <div class="col-7">
+                                        <input class="form-control" formControlName="releaseAmount"
+                                            [class.isError]="controls.releaseAmount.touched && controls.releaseAmount.invalid">
+                                        <mat-error
+                                            *ngIf="controls.releaseAmount.touched && controls.releaseAmount.errors?.required">
                                             Required field
                                         </mat-error>
                                     </div>
@@ -150,7 +151,10 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
-                                        <mat-label>Part Release Amount Status</mat-label>
+                                        <mat-label *ngIf="data.name === 'jewelleryReleaseApproval'">Part Release Amount
+                                            Status</mat-label>
+                                        <mat-label *ngIf="data.name === 'fullReleaseApproval'">Full Release Amount
+                                            Status</mat-label>
                                     </div>
                                     <div class="col-7">
                                         <select class="form-control" formControlName="amountStatus"
