changes in calculation

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -267,7 +267,7 @@
                             <tbody>
                                 <tr *ngFor="let data of dateOfPayment;index as idx; last as last">
                                     <td *ngIf="approved">{{data.emiDueDate | date :'mediumDate'}}</td>
-                                    <td *ngIf="!approved">{{data.paymentType | uppercase}}&nbsp;{{idx+1}}</td>
+                                    <td *ngIf="!approved">{{data.paymentType | uppercase}}&nbsp;({{idx+1}})</td>
 
                                     <td class="text-center currency">
                                         {{data.securedInterestAmount | indianCurrencyFormat}}
