bm::chnages in loan id, master loan id

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
@@ -47,7 +47,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="partReleaseAmountStatus">
-                    <mat-header-cell *matHeaderCellDef>Part Release Amount Status</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Full Release <br> Amount Status</mat-header-cell>
                     <mat-cell
                         [ngClass]="item.amountStatus == 'completed' ? 'text-success': item.amountStatus == 'pending' ? 'text-warning' : 'text-danger'"
                         *matCellDef="let item">{{item.amountStatus | titlecase}}
