--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -49,7 +49,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="partReleaseAmountStatus">
-                    <mat-header-cell *matHeaderCellDef>Part Release Amount Status</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Part Release<br> Amount Status</mat-header-cell>
                     <mat-cell
                         [ngClass]="item.amountStatus == 'completed' ? 'text-success': item.amountStatus == 'pending' ? 'text-warning' : 'text-danger'"
                         *matCellDef="let item">{{item.amountStatus | titlecase}}</mat-cell>
