Added invoice date column in order details

--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
@@ -133,7 +133,7 @@
                 <ng-container matColumnDef="merchant">
                     <mat-header-cell *matHeaderCellDef>Merchant</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.Createdby?.broker?.merchant?.merchantName ? element?.Createdby?.broker?.merchant?.merchantName : '-'}}
+                        {{element?.merchant?.merchant?.merchantName ? (element?.merchant?.merchant?.merchantName | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="createdDate">
