--- a/gold-admin-frontend/src/app/views/theme/base/base.component.scss
+++ b/gold-admin-frontend/src/app/views/theme/base/base.component.scss
@@ -13,7 +13,8 @@ kt-base {
 		transition: opacity 1s ease-in-out;
 	}
 	.margin-top{
-		margin-top: -22px !important;
+		// margin-top: -22px !important;
+		margin-top: 5px !important;
 	}
 	.kt-content{
 		padding:  0;
