--- a/gold-admin-frontend/src/app/views/theme/header/header.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/header.component.html
@@ -13,7 +13,7 @@
 	<!-- <div *ngIf="!menuHeaderDisplay"></div>
 	<kt-topbar></kt-topbar> -->
 	<!-- end:: Header Topbar -->
-	<div class="row w-100">
+	<div class="row w-100 pt-2 pb-2">
 		<div class="col-12  align-self-center">
 			<kt-topbar></kt-topbar>
 		</div>
