--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -50,10 +50,11 @@
 
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label class="mandatory kt-padding-l-10">Appraiser Name</label>
+                                <label *ngIf="!data.isReleaser" class="mandatory kt-padding-l-10">Appraiser Name</label>
+                                <label *ngIf="data.isReleaser" class="mandatory kt-padding-l-10">Releaser Name</label>
                             </div>
 
-                            <div class="col-8">
+                            <div *ngIf="!data.isReleaser" class="col-8">
                                 <select class="form-control" name="" id="" formControlName="appraiserId"
                                     [class.isError]="controls.appraiserId.touched && controls.appraiserId.invalid">
                                     <option [selected]="true" [disabled]="true" value="">Select Appraiser</option>
@@ -64,6 +65,20 @@
 
                                 <mat-error
                                     *ngIf="controls.appraiserId.touched && controls.appraiserId.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
+
+                            <div *ngIf="data.isReleaser" class="col-8">
+                                <select class="form-control" name="" id="" formControlName="releaserId"
+                                    [class.isError]="controls.releaserId.touched && controls.releaserId.invalid">
+                                    <option [selected]="true" [disabled]="true" value="">Select Releaser</option>
+                                    <option *ngFor="let appraiser of appraisers" [value]="appraiser.id">
+                                        {{appraiser.firstName | titlecase}}&nbsp;{{appraiser.lastName | titlecase}}
+                                    </option>
+                                </select>
+
+                                <mat-error *ngIf="controls.releaserId.touched && controls.releaserId.errors?.required">
                                     Required field
                                 </mat-error>
                             </div>
