--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
@@ -5,69 +5,78 @@
 
                 <ng-container matColumnDef="transactionId">
                     <mat-header-cell *matHeaderCellDef>Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.transactionUniqueId }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="bankTransactionId">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.bankTransactionUniqueId | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.customerLoan.customer.customerUniqueId | titlecase}}
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.customerLoan.loanUniqueId | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositDate">
                     <mat-header-cell *matHeaderCellDef>Deposit Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.paymentReceivedDate  | date: 'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">
+                        {{deposit.customerLoan.customer.firstName | titlecase}}&nbsp;
+                        {{deposit.customerLoan.customer.lastName | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.customerLoan.customer.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="modeOfPayment">
                     <mat-header-cell *matHeaderCellDef>Mode of Payment</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.paymentType | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositBankName">
                     <mat-header-cell *matHeaderCellDef>Deposit Bank Name</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.bankName | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositBranchName">
                     <mat-header-cell *matHeaderCellDef>Deposit Branch Name</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.branchName| titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositAmount">
                     <mat-header-cell *matHeaderCellDef>Deposit Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.transactionAmont}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositStatus">
                     <mat-header-cell *matHeaderCellDef>Deposit Status</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let deposit">
+                        <span
+                            [ngClass]="deposit.depositStatus  == 'Pending' ? 'text-warning' :deposit.depositStatus == 'Completed' ? 'text-success' : 'text-danger' ">
+                            {{deposit.depositStatus | titlecase}}
+                        </span>
+                    </mat-cell>
+
                 </ng-container>
 
                 <ng-container matColumnDef="update">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-                    <mat-cell *matCellDef="let item">
+                    <mat-cell *matCellDef="let deposit">
                         <ng-container>
-                            <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(item)">Update
+                            <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(deposit)">Update
                             </button>
                         </ng-container>
 
