--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="filtered-data" *ngIf="filteredList?.kycStatus">
-                        <div class="filtered-title">By B.M Status</div>
+                        <div class="filtered-title">By KYC Status</div>
                         <div class="d-flex">
                             <div class="filtered-value" *ngFor="let item of filteredList?.kycStatus; let i = index;">
                                 <span>{{item?.name | titlecase}}</span>
